src/components/summary.css
@import 'variables.css';

@keyframes evslidein {
    from {
        left: -300px;
        opacity: 1;
        width: 440px;
    }

    3% {
        left: 10px;
        opacity: 1;
    }

    20% {
        opacity: 1;
    }
    30% {
        opacity: 0.4;
    }

    90% {
        width: 440px;
        opacity: 0.4;
    }

    to {
        width: 40px;
        opacity: 0.4;
    }
}

.summary {
    & .menu-button {
        position: absolute;
        top: var(--padding);
        left: var(--padding);
        z-index: 250;
    }

    & .summary-filtered-event {
        position: absolute;
        top: 15px;
        left: 70px;
        color: #444;
        width: 250px;
        white-space: nowrap;
        display: flex;
        flex-direction: row;
        background-color: var(--button-background);
        color: white;
        padding: 5px 10px;
        border-radius: 30px;
        opacity: 0.5;
        box-shadow: 0 3px 4px 0 rgba(0,0,0,0.14), 0 2px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
        z-index: 200;

        &:hover {
            opacity: 1;
        }

        & .event-name {
            flex: 1 1 auto;
            overflow: hidden;
            text-overflow: ellipsis;
            margin: auto 0;
        }

        & .cancel-event {
            background-color: transparent;
            padding: 0;
        }
    }

    & .menu-button-new {
        position: absolute;
        width: 32px;
        height: 32px;
        top: 48px;
        left: 44px;
        z-index: 300;
        pointer-events: none;
        transform: rotate(-30deg);
    }

    & .newFeature {
        background-image: url(/img/newfeature.png);
        background-repeat: no-repeat;
    }

    & .menu-overlay, & .popup-overlay {
        position: absolute;
        left: 0;
        top: 0;
        bottom: 0;
        right: 0;
        background-color: transparent;
        z-index: 300;
        user-select: none;
        touch-action: none;

        &.hide {
            display: none;
        }
    }
    & .popup-overlay {
        background-color: rgba(255, 255, 255, 0.4);
    }
    & .popup-content {
        position: absolute;
        left: 0;
        right: 0;
        margin: 0 auto;
        background-color: var(--menu-background);
        border: 2px solid var(--activity-color);
        border-radius: 25px;
        z-index: 400;
    }

    & .menu-content {
        background-color: var(--menu-background);
        position: absolute;
        left: 0;
        top: 0;
        bottom: 0;
        width: 220px;
        transition: left ease 400ms;
        z-index: 350;
        user-select: none;
        touch-action: none;
        overflow-y: auto;

        &.hide {
            left: -300px;
        }

        & .actions {
            margin: 10px 0 0 0;
            padding: 10px 0 0 0;
            list-style: none;
            border-top: 2px solid var(--activity-color);

            & li a {
                display: flex;
                flex-direction: row;
                box-sizing: border-box;
                padding: var(--padding) 20px;
                -webkit-tap-highlight-color: rgba(255, 255, 255, 0);

                & span {
                    flex: 1;
                    padding: 7px;
                }
                & img, & .zwiftgps-icon {
                    flex: 0;
                    padding: 0;
                    display: inline-block;
                    margin-right: 10px;
                }

                &:hover, &:active {
                    background-color: var(--shaded-background);
                }

                &.newFeature {
                    background-position: 180px 10px;
                }
            }
        }
    }

    & .logo {
        width: 90%;
        height: 30px;
        background-image: url(/img/zwift.png);
        background-size: 100% 100%;
        background-repeat: no-repeat;
        margin: var(--padding) auto;
    }

    & .player-name {
        text-align: center;
        padding: var(--padding);
        font-weight: bold;
        color: var(--activity-color);
    }

    & .map-attribute {
        position: absolute;
        right: 5px;
        top: 5px;
        width: auto;
        padding: var(--padding);
        z-index: 100;

        color: #808080;
    }

    & .world-selector {
        box-sizing: border-box;
        width: 700px;
        top: 30px;
        max-width: 80%;
        padding: 0 25px 25px 25px;
        text-align: center;

        & h2 {
            margin: 20px 0 10px 0;
        }

        & ul {
            list-style: none;
            margin: 0;
            padding: 0;
        }

        & li {
            display: inline-block;
            width: 80px;
            height: 80px;
            margin: 10px;
            background-color: var(--button-background);
            border-radius: 25px;
            padding: 10px;
            cursor: pointer;

            & .world-image {
                display: inline-block;
                width: 60px;
                height: 60px;
                border-radius: 10px;
                background: url(/img/worlds.png);

                &.world-1 {
                    background-position: 0 0;
                }

                &.world-2 {
                    background-position: 0 -60px;
                }

                &.world-3 {
                    background-position: 0 -120px;
                }

                &.world-4 {
                    background-position: 0 -240px;
                }

                &.world-5 {
                    background-position: 0 -180px;
                }
            }

            & .world-name {
                font-size: 0.9em;
                color: white;
                font-weight: bold;
            }
        }
    }

    & .strava-settings {
        box-sizing: border-box;
        width: 440px;
        top: 30px;
        max-width: 80%;
        padding: 0 25px 25px 25px;
        text-align: center;

        & h2 {
            margin: 20px 0 20px 0;
        }

        & .description {
            margin: 10px 0;
            font-size: 0.9em;
        }

        & .popup-footer {
            margin: 20px 0 0 0;
        }
    }

    & .strava-config-startdate {
        & h3 {
            margin: 40px 0 10px 0;
            font-size: 0.9em;
        }

        & ul {
            width: 70%;
            margin: 0 auto;
            padding: 9;
        }

        & li {
            list-style: none;
            text-align: left;
        }

        & .age {
            width: 50px;
        }

        & input[type=text] {
            margin: 0 10px;
            padding: 5px;
            text-align: center;
        }
    }

    & .rider-filter {
        box-sizing: border-box;
        width: 380px;
        top: 30px;
        max-width: 80%;
        padding: 0 25px 25px 25px;
        text-align: center;

        & h2 {
            margin: 20px 0 10px 0;
        }

        & ul {
            list-style: none;
            margin: 10px 0;
            padding: 0;
            text-align: left;
            overflow-y: auto;
            max-height: 600px;
        }
    }

    & .event-item {
        display: block;
        width: 100%;
        height: 105px;
        border-bottom: 4px solid var(--app-button-background);
        background-color: var(--input-border);
        background-size: 100% 100%;
        position: relative;
        cursor: pointer;

        &:last-child {
            border-bottom: none;
        }

        & .event-free {
            position: absolute;
            box-sizing: border-box;
            top: 10px;
            left: 10px;
            right: 10px;
            bottom: 10px;
            border-radius: 5px;
            background-color: white;
            font-weight: bold;
            padding: 30px 0;
            text-align: center;
        }

        & .event-content {
            position: absolute;
            box-sizing: border-box;
            border-top-left-radius: 5px;
            bottom: 0;
            right: 0;
            width: 100%;
            background-color: white;
            padding: 5px 5px 0 5px;
        }

        & .event-line {
            display: flex;
            flex-direction: row;
            justify-content: flex-end;
            border-top: 1px solid #CCC;
            padding: 2px 0;

            & .group {
                display: inline-block;
                font-size: 75%;
                min-width: 13px;
                background-color: #CCC;
                padding: 2px;
                border-radius: 8px;
                margin-left: 5px;
                text-align: center;
                color: white;
            }

            & .group-1 {
                background-color: #fc4119;
            }
            & .group-2 {
                background-color: #58c34e;
            }
            & .group-3 {
                background-color: #3ec0e9;
            }
            & .group-4 {
                background-color: #fccf0b;
            }
            & .group-5 {
                background-color: #943e5e;
            }
            
        }
        & .event-line:first-child {
            border-top: none;
        }

        & .event-time {
            display: inline-block;
            width: 60px;
            font-weight: bold;
            flex: 0 0 auto;
        }

        & .event-name {
            display: inline-block;
            flex: 1 1 auto;
            text-align: right;
            white-space: nowrap;
            overflow-x: hidden;
            text-overflow: ellipsis;
        }
    }
    
    & .summary-quick-links {
        position: absolute;
        top: 80px;
        left: 10px;
        list-style: none;
        margin: 0;
        padding: 0;
        overflow: hidden;
        z-index: 200;

        animation-duration: 15s;
        animation-iteration-count: 1;
        animation-name: evslidein;

        width: 40px;
        opacity: 0.4;
    }

    & .game-selector {
        box-sizing: border-box;
        width: 440px;
        top: 30px;
        max-width: 80%;
        padding: 0 25px 25px 25px;
        text-align: center;

        & h2 {
            margin: 20px 0 10px 0;
        }

        & ul {
            list-style: none;
            margin: 0;
            padding: 0;
        }

        & li {
            display: inline-block;
            width: 80px;
            height: 80px;
            margin: 10px;
            background-color: var(--button-background);
            border-radius: 25px;
            padding: 10px;
            cursor: pointer;

            & .game-image {
                display: inline-block;
                width: 60px;
                height: 60px;
                border-radius: 10px;
            }

            & .game-name {
                font-size: 0.9em;
                color: white;
                font-weight: bold;
            }
        }
    }
}

.game-image {
    background: url(/img/games.png);

    &.game-zwiftgps {
        background-position: 0 0;
    }

    &.game-zwiftquest {
        background-position: 0 -60px;
    }

    &.game-goldrush {
        background-position: 0 -120px;
    }
}

.overlay .summary {
    opacity: 0;
    transition: opacity ease 1s;
}
.overlay.openfin .summary {
    transition: none;
}
.overlay.hovering .summary {
    opacity: 1;
}

@media (max-height: 400px) {
    .summary {
        & .logo {
            display: none;
        }
        & .player-name {
            padding: 10px 0 0 0;
        }
    }
}

